--- a/afu_gefahrenkartierung_mgdm/build.gradle
+++ b/afu_gefahrenkartierung_mgdm/build.gradle
@@ -11,80 +11,80 @@ Class mapping between the models:
 - IK_synoptisch_MGDM --> synoptic_intensity
 
 Go on: 
-- Validierung des manuellen Exports - wo ist problem bei assessment_area?
 - Dann zip task
 */
 
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
+import java.nio.file.Files
+import java.nio.file.Paths
+import java.io.File
+
 defaultTasks 'mapGefkart2Mgdm'
 
 /*
 1. Transform the data from model SO_AfU_Gefahrenkartierung into bafu model Hazard_Mapping using GRETL sql
 */
-
-task stageKantonsgrenze(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
-    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    transferSets = [new TransferSet('stage_kantonsgrenze.sql', 'afu_gefahrenkartierung_stage_mgdm.kantonsgrenze', true)];        
-}
-
 task mapGefkart2Mgdm(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
-		new TransferSet('assessment_area.sql', 'afu_gefahrenkartierung_stage_mgdm.assessment_area', true),
-		new TransferSet('hazard_area.sql', 'afu_gefahrenkartierung_stage_mgdm.hazard_area', true),
-		new TransferSet('synoptic_intensity.sql', 'afu_gefahrenkartierung_stage_mgdm.synoptic_intensity', true)
-		
+		new TransferSet('assessment_area.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_assessment_area', true)
+		,new TransferSet('hazard_area.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_hazard_area', true)
+		,new TransferSet('synoptic_intensity.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_synoptic_intensity', true)
 	];        
 }
 
 /*
 2. Create the *.xtf with the ili2pg GRETL task
 */
-import java.nio.file.Paths
-
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
-def exportLog = file(Paths.get(pathToTempFolder.toString(), "export.log"))
-def exportFile = file(Paths.get(pathToTempFolder.toString(), "export.xtf"))
 
-task exportGefkartMgdm(type: Ili2pgExport, dependsOn:'mapGefkart2Mgdm') {
+def loggingFile = file(Paths.get(pathToTempFolder.toString(), "gretl_gefkart_log.log"))
+def exportFileName = 'gretl_gefkart_data.xtf'
+def exportFile = file(Paths.get(pathToTempFolder.toString(), exportFileName))
+
+task exportGefkartMgdm(type: Ili2pgExport, dependsOn: 'mapGefkart2Mgdm') {
     description = "Exportiert die ins Gefahrenkartierungs-MGDM umgebauten Daten in ein xtf-File."
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    dbschema = "afu_gefahrenkartierung_stage_mgdm"
+    dbschema = "afu_gefahrenkartierung_export_ai"
     models = "Hazard_Mapping_LV95_V1_2"
-    logFile = exportLog
+    logFile = loggingFile
     dataFile = exportFile
 }
 
 /*
 3. Package and upload to the KKGEO AI
 */
-
 /*
-def zipName = 'LV95.zip'
+def zipName = 'gefkart_export.zip'
 
-task zipGefkartMgdm(type: Zip){//, dependsOn: 'exportGefkartMgdm'){
-    description = "Zippt das xtf-File mit den Gefahrenkartierungsdaten (MGDM vom Bund) für den Upload in die " +
+task zipGefkartMgdm(type: Zip, dependsOn: 'exportGefkartMgdm'){
+    description = "Zipt das xtf-File mit den Gefahrenkartierungsdaten (MGDM vom Bund) für den Upload in die " +
             "Aggregationsinfrastruktur."
-    from pathToTempFolder
-    include exportFile
     archiveName zipName
-    destinationDir(file(pathToTempFolder))
+    destinationDir tmpDir
+            
+    from zipContentDir
 }
 
-task uploadGefkartMgdm{//(dependsOn: zipGefkartMgdm) {
+//def aiLogin = aiUser + ":" + aiPwd
+def aiLogin = 'geodienste_so:ee4Aipai';
+def aiServer = 'www-integration.geodienste.ch'
+def serverUrl = "https://" + aiServer + "/data_agg/interlis/import"
+def zipFile = new File(tmpDir, zipName)
+
+task uploadGefkartMgdm(dependsOn: zipGefkartMgdm) {
     description = "Lädt die Gefahrenkartierungsdaten (MGDM vom Bund) in die Aggregationsinfrastruktur hoch."
     doLast {
-        def response = ["curl", "-u", aiLogin, "-F", "topic=npl_nutzungsplanung", "-F",
-                        "lv95_file=@" + Paths.get(pathToTempFolder.toString(), zipName), "-F", "publish=true",
-                        "https://" + aiServer + "/data_agg/interlis/import"].execute().text
+        println "Groesse der hochzuladenden Dateien (byte). XTF unkomprimiert: " + exportFile.length() + " ZIP: " + zipFile.length()
+        def response = ["curl", "-u", aiLogin, "-F", "topic=gefahrenkarten", "-F",
+                        "lv95_file=@" + zipFile, "-F", "publish=true", serverUrl
+                        ].execute().text
         println(response)
     }
-}
-*/
+}*/
 
 
 /*
