--- a/afu_gefahrenkartierung_mgdm/build.gradle
+++ b/afu_gefahrenkartierung_mgdm/build.gradle
@@ -22,6 +22,8 @@ import java.nio.file.Paths
 import java.io.File
 
 defaultTasks 'uploadGefkartMgdm'
+//defaultTasks 'mapGefkart2Mgdm'
+
 
 /*
 1. Transform the data from model SO_AfU_Gefahrenkartierung into bafu model Hazard_Mapping using GRETL sql
@@ -30,20 +32,22 @@ task mapGefkart2Mgdm(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
-		//new TransferSet('assessment_area.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_assessment_area', true)
-		new TransferSet('hazard_area.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_hazard_area', true)
-		//,new TransferSet('synoptic_intensity.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_synoptic_intensity', true)
+		new TransferSet('assessment_area.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_assessment_area', true),
+		new TransferSet('hazard_area.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_hazard_area', true),
+		new TransferSet('synoptic_intensity.sql', 'afu_gefahrenkartierung_export_ai.hazard_mapping_synoptic_intensity', true)
 	];        
 }
 
 /*
 2. Create the *.xtf with the ili2pg GRETL task
 */
-def zipContentDir = file('/home/gradle/project/tmp/gefkart/zipcontent')
+def jobTempRoot = 'gefkart'
+def zipContentDir = file(Paths.get(gretlShare, jobTempRoot, 'zipcontent'))
+        //file('/home/gradle/project/tmp/gefkart/zipcontent')
 def tmpDir = zipContentDir.getParentFile()
 
-def loggingFile = file(Paths.get(tmpDir.toString(), "gretl_gefkart_log.log"))
-def exportFileName = 'gretl_gefkart_data.xtf'
+def loggingFile = file(Paths.get(tmpDir.toString(), "iliexport.log"))
+def exportFileName = 'iliexport.xtf'
 def exportFile = file(Paths.get(zipContentDir.toString(), exportFileName))
 
 task exportGefkartMgdm(type: Ili2pgExport, dependsOn: 'mapGefkart2Mgdm') {
@@ -58,7 +62,7 @@ task exportGefkartMgdm(type: Ili2pgExport, dependsOn: 'mapGefkart2Mgdm') {
 /*
 3. Package and upload to the KKGEO AI
 */
-def zipName = 'gefkart_export.zip'
+def zipName = 'iliexport.zip'
 
 task zipGefkartMgdm(type: Zip, dependsOn: 'exportGefkartMgdm'){
     description = "Zipt das xtf-File mit den Gefahrenkartierungsdaten (MGDM vom Bund) für den Upload in die " +
@@ -69,9 +73,11 @@ task zipGefkartMgdm(type: Zip, dependsOn: 'exportGefkartMgdm'){
     from zipContentDir
 }
 
-//def aiLogin = aiUser + ":" + aiPwd
-def aiLogin = 'geodienste_so:ee4Aipai';
-def aiServer = 'www-integration.geodienste.ch'
+
+def aiLogin = aiUser + ":" + aiPwd
+//def aiLogin = 'geodienste_so:fuubar';
+//def aiServer = 'www-integration.geodienste.ch'
+
 def serverUrl = "https://" + aiServer + "/data_agg/interlis/import"
 def zipFile = new File(tmpDir, zipName)
 
