--- a/afu_geotope/build.gradle
+++ b/afu_geotope/build.gradle
@@ -5,6 +5,15 @@ apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAfuGeotopeLithostratigraphie', 'transferAfuGeotope'
 
+task generateZustaendigeStelle(type: Db2Db){
+    sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet('afu_geotope_geotope_zustaendige_stelle.sql', 'afu_geotope.geotope_zustaendige_stelle',
+                    true)
+    ]
+}
+
 task transferAfuGeotopeBasic(type: Db2Db){
     sourceDb = [dbUriPub, dbUserPub, dbPwdPub] //[dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
@@ -51,9 +60,11 @@ task transferAfuGeotopeRelations(type: Db2Db){
 }
 
 task transferAfuGeotope {
+    dependsOn 'generateZustaendigeStelle'
     dependsOn 'transferAfuGeotopeBasic'
     dependsOn 'transferAfuGeotopeRelations'
 
+    tasks.findByName('transferAfuGeotopeBasic').mustRunAfter 'generateZustaendigeStelle'
     tasks.findByName('transferAfuGeotopeRelations').mustRunAfter 'transferAfuGeotopeBasic'
 }
 
